# quick-data-mcp

./: Dockerfile  Dockerfile.supergateway  README.md
quick-data-mcp/: main.py  pyproject.toml
quick-data-mcp/src/mcp_server/: server.py
quick-data-mcp/src/mcp_server/config/: settings.py
quick-data-mcp/src/mcp_server/models/: schemas.py
quick-data-mcp/src/mcp_server/prompts/: __init__.py  correlation_investigation_prompt.py  dashboard_design_consultation_prompt.py  data_quality_assessment_prompt.py  dataset_first_look_prompt.py  find_datasources_prompt.py  insight_generation_workshop_prompt.py  list_mcp_assets_prompt.py  pattern_discovery_session_prompt.py  segmentation_workshop_prompt.py
quick-data-mcp/src/mcp_server/resources/: __init__.py  data_resources.py
quick-data-mcp/src/mcp_server/tools/: __init__.py  analyze_distributions_tool.py  calculate_feature_importance_tool.py  compare_datasets_tool.py  create_chart_tool.py  detect_outliers_tool.py  execute_custom_analytics_code_tool.py  export_insights_tool.py  find_correlations_tool.py  generate_dashboard_tool.py  list_loaded_datasets_tool.py  load_dataset_tool.py  memory_optimization_report_tool.py  merge_datasets_tool.py  (+5 more)
quick-data-mcp/tests/: test_analytics_prompts.py  test_analytics_tools.py  test_custom_analytics_code.py  test_data_resources.py  test_pandas_tools.py  test_resource_mirror_tools.py
quick-data-mcp/tests/prompts/: test_dataset_first_look_prompt.py  test_find_datasources_prompt.py  test_list_mcp_assets_prompt.py
quick-data-mcp/tests/resources/: test_get_server_config_resource.py
(+1 files in other folders)
