[project]
name = "quick-data-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.2",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pydantic>=2.11.7",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
]
